--- a/cli/basic/Cargo.toml
+++ b/cli/basic/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "basics"
+name = "basic"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.8.5"
-num-traits = "0.2.19"
-
+clap = "4.5.16"
+termimad = "0.30.0"
