--- a/cli/continous/Cargo.toml
+++ b/cli/continous/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "basics"
+name = "continous"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.8.5"
-num-traits = "0.2.19"
-
+crossterm = "0.25.0"
